--- a/p2p/LoRa-32-V3/sketch.yaml
+++ b/p2p/LoRa-32-V3/sketch.yaml
@@ -7,6 +7,7 @@ profiles:
     libraries:
       - RadioLib (7.6.0)
       - SdFat (2.3.0)
+      - ESP8266 and ESP32 OLED driver for SSD1306 displays (4.6.2)
     notes: A
     port: COM4
     port_config:
@@ -23,6 +24,7 @@ profiles:
     libraries:
       - RadioLib (7.6.0)
       - SdFat (2.3.0)
+      - ESP8266 and ESP32 OLED driver for SSD1306 displays (4.6.2)
     notes: A
     port: COM4
     port_config:
